# fastapi-ddd-chat

./: Makefile  README.md  pyproject.toml
app/application/api/: main.py
app/application/api/messages/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/tests/: conftest.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml
